@@ -22,6 +22,8 @@ Bug fixes
   Fix handling of q-mode parameters
 * [`2420 <https://cta-redmine.irap.omp.eu/issues/2420>`_] -
   Keep existing library path in installation script on Mac OS X
+* [`2054 <https://cta-redmine.irap.omp.eu/issues/2054>`_] -
+  Preserve GTIs when copying ``GCTAEventList`` and ``GCTAEventCube`` objects
 
 
 Improvements
